feat: simplify skills
language libraries in brackets

--- a/main.tex
+++ b/main.tex
@@ -144,7 +144,7 @@
   {Software Engineer / Founder}
   {Thalora Ltd}
   {Jan 2024 - Present}
-  {Python, Django, JavaScript, PostgreSQL, TimescaleDB, SQLite, Docker, Nix, Azure, Nbdev}
+  {Python (Django), JavaScript, Postgres, Azure, Docker, Nix, Git}
   {
       \item 
       Formed Thalora Ltd to assist Django-based organisations with web development. Continued working with Mainstream Renewable Power (see below) on a consultancy basis.
@@ -154,7 +154,7 @@
   {Software Engineer / Co-Founder}
   {PowerScope Ltd}
   {Aug 2024 - Apr 2025}
-  {Python, TypeScript, NodeJS, React, AWS, Lambda, DynamoDB, Docker, Nix, Terraform, CDK}
+  {Python, JavaScript (React), DynamoDB, AWS, IaC (CDK), Docker, Nix, Git}
   {
       \item
       Co-founded PowerScope Ltd to empower solar panel installers to assess the investment case for battery storage for commercial tenders, \& in the process:
@@ -172,7 +172,7 @@
   {Web Developer}
   {Mainstream Renewable Power (MRP)}
   {Oct 2021 - Dec 2023}
-  {Python, Django, JavaScript, PostgreSQL, TimescaleDB, SQLite, Docker, Nix, Azure, Nbdev}
+  {Python (Django), JavaScript, Postgres, Azure, Docker, Nix, Git}
   {
       \item
       Fully rebuilt the MRP data platform to resolve its reliability issues, \& in the process:
@@ -190,7 +190,7 @@
   {Data Analyst}
   {Codema}
   {Aug 2019 - Oct 2021}
-  {Python, Pandas, scikit-learn, Jupyter, Docker, Git}
+  {Python, Docker, Git}
   {
       \item 
       Co-developed the \href{https://www.codema.ie/our-work/dublin-region-energy-master-plan/}{\raisebox{-0.05\height}\faGlobe\ \underline{Dublin Energy Masterplan}} (as part of a team of four) to estimate the impact of local \& regional energy policy decisions on the Dublin energy system, \& in the process:
