style: remove bullet point in interests

--- a/main.tex
+++ b/main.tex
@@ -220,11 +220,7 @@
 % Interests
 %-----------
 \section{Interests}
-\begin{minipage}[t]{0.97\textwidth}
-  \begin{itemize}[nosep, leftmargin=2em, itemsep=4pt]
-    \item Avid boulderer/rock climber (indoors), hiker (Kilimanjaro in 2024 - never again!), sea swimmer (especially in Irish winter), surfer (in less than 5 feet of waves)
-  \end{itemize}
-\end{minipage}
+Avid boulderer/rock climber (indoors), hiker (Kilimanjaro in 2024 - never again!), sea swimmer (especially in Irish winter), surfer (in less than 5 feet of waves)
 
 % -------------
 \end{document}
