--- a/main.tex
+++ b/main.tex
@@ -126,7 +126,7 @@
 \fancyfoot[R]{%
   \hrule
   \vspace{6pt}
-  * Personal projects
+  * A Wind \& Solar Developer with multiple operational projects predominantly in Chile \& South Africa
 }
 
 
@@ -147,7 +147,9 @@
   {Python (Django), JavaScript, Postgres, Azure, Docker, Nix, Git}
   {
       \item 
-      Formed Thalora Ltd to assist Django-based organisations with web development. Continued working with Mainstream Renewable Power (see below) on a consultancy basis.
+      Formed Thalora Ltd to assist organisations with web development projects.
+      Continued working with Mainstream Renewable Power (see below) on a consultancy basis,
+      \& from August 2024 concentrating on PowerScope Ltd (see below).
   }
 
 \cventry
@@ -157,32 +159,30 @@
   {Python, JavaScript (React), DynamoDB, AWS, IaC (CDK), Docker, Nix, Git}
   {
       \item
-      Co-founded PowerScope Ltd to empower solar panel installers to assess the investment case for battery storage for commercial tenders, \& in the process:
+      Co-founded PowerScope Ltd to develop a tool that would enable solar panel installers \& others to scope battery storage solutions for bespoke commercial tenders, \& in the process:
       \begin{itemize}
         \item
-        Developed a battery dispatch model on top of an optimisation \& financial modelling framework to enable estimating "best case" financial feasibility of battery \& solar projects.
+        Developed a model to enable estimation of "best case" financial feasibility of battery \& solar projects.
         \item 
-        Continuously deployed a serverless interactive web application to grant access to it.
+        Continuously deployed an interactive, serverless web application to grant access to the model.
         \item
-        Iterated on the business model over 10 or so pilot projects with various customer segments (solar installers, asset owners, energy brokers etc.)
+        Trialled the system over 10 or so pilot projects with various customer segments (solar installers, asset owners, energy brokers etc.)
       \end{itemize}
   }
 
 \cventry
   {Web Developer}
-  {Mainstream Renewable Power (MRP)}
+  {Mainstream Renewable Power (MRP)*}
   {Oct 2021 - Dec 2023}
   {Python (Django), JavaScript, Postgres, Azure, Docker, Nix, Git}
   {
       \item
-      Fully rebuilt the MRP data platform to resolve its reliability issues, \& in the process:
+      Fully rebuilt the MRP data platform (which grants access to timeseries sensor data from over 100 operational locations) to resolve its reliability issues, \& in the process:
       \begin{itemize}
-        \item
-        Built a reliable data pipeline spanning multiple servers and databases to keep the data platform in daily sync with over 100 operational weather stations, and grant analysts and station managers access to data.
         \item 
-        Simplified the system architecture over time by removing, combining, or replacing its constituent components to ease its maintenance burden, while continuing to serve the system's user needs above \& beyond its original functionality (see \href{https://www.rowanmolony.com/post/on-reengineering-a-legacy-data-platform-20231204}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}).
+        Simplified the system architecture over time by removing, combining, or replacing its components to ease its maintenance burden while continuing to serve the system's user needs (see \href{https://www.rowanmolony.com/post/on-reengineering-a-legacy-data-platform-20231204}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}).
         \item 
-        A high coverage test suite (unit, integration, \& end to end) from nil running in continuous integration to help maintain the system's reliability.
+        Developed a high coverage test suite (unit, integration, \& end to end) from nil running in continuous integration to ensure the system's reliability.
       \end{itemize}
   }
 
