style: reformat footnote

--- a/main.tex
+++ b/main.tex
@@ -123,9 +123,10 @@
   \href{https://github.com/rdmolony}{\raisebox{-0.1\height}\faGithub\ \underline{rdmolony}}
 }
 
-\fancyfoot[R]{%
-  \hrule
-  \vspace{6pt}
+\fancyfoot[L]{%
+  \footnotesize
+  \rule{0.25\textwidth}{0.1pt}\\
+  \vspace{2pt}
   * A Wind \& Solar Developer with multiple operational projects predominantly in Chile \& South Africa
 }
 
