feat: switch js to ts for powerscope
i did in fact use ts not js

--- a/main.tex
+++ b/main.tex
@@ -157,7 +157,7 @@
   {Software Engineer / Co-Founder}
   {PowerScope Ltd}
   {Aug 2024 - Apr 2025}
-  {Python, JavaScript (React), DynamoDB, AWS, IaC (CDK), Docker, Nix, Git}
+  {Python, TypeScript (React), DynamoDB, AWS, IaC (CDK), Docker, Nix, Git}
   {
       \item
       Co-founded PowerScope Ltd to develop a tool that would enable solar panel installers \& others to scope battery storage solutions for bespoke commercial tenders, \& in the process:
