chore: rename main.tex to cv.tex

--- a/cv.tex
+++ b/cv.tex
@@ -123,13 +123,6 @@
   \href{https://github.com/rdmolony}{\raisebox{-0.1\height}\faGithub\ \underline{rdmolony}}
 }
 
-\fancyfoot[L]{%
-  \footnotesize
-  \rule{0.25\textwidth}{0.1pt}\\
-  \vspace{2pt}
-  * A Wind \& Solar Developer with multiple operational projects predominantly in Chile \& South Africa
-}
-
 
 % ---------------------------------------------------------
 % Document
@@ -143,19 +136,19 @@
 
 \cventry
   {Software Engineer / Founder}
-  {Thalora Ltd}
+  {Thalora Ltd (a software consultancy)}
   {Jan 2024 - Present}
   {Python (Django), JavaScript, Postgres, Azure, Docker, Nix, Git}
   {
       \item 
-      Formed Thalora Ltd to assist organisations with web development projects.
-      Continued working with Mainstream Renewable Power (see below) on a consultancy basis,
-      \& from August 2024 concentrating on PowerScope Ltd (see below).
+      Formed Thalora Ltd (a one-man shop) through which I worked with companies to help manage legacy codebases (databases, cloud infrastructure, data pipelines, data analytics).
+      Continued working with Mainstream Renewable Power (see below),
+      \& from August 2024 concentrating primarily on PowerScope Ltd (see below).
   }
 
 \cventry
   {Software Engineer / Co-Founder}
-  {PowerScope Ltd}
+  {PowerScope Ltd (a startup)}
   {Aug 2024 - Apr 2025}
   {Python, TypeScript (React), DynamoDB, AWS, IaC (CDK), Docker, Nix, Git}
   {
@@ -173,12 +166,12 @@
 
 \cventry
   {Web Developer}
-  {Mainstream Renewable Power (MRP)*}
+  {Mainstream Renewable Power (a wind developer)}
   {Oct 2021 - Dec 2023}
   {Python (Django), JavaScript, Postgres, Azure, Docker, Nix, Git}
   {
       \item
-      Fully rebuilt the MRP data platform (which grants access to timeseries sensor data from over 100 operational locations) to resolve its reliability issues, \& in the process:
+      Fully rebuilt Mainstream's data platform (which grants access to timeseries sensor data from over 100 operational locations) to resolve its reliability issues, \& in the process:
       \begin{itemize}
         \item 
         Simplified the system architecture over time by removing, combining, or replacing its components to ease its maintenance burden while continuing to serve the system's user needs (see \href{https://www.rowanmolony.com/post/on-reengineering-a-legacy-data-platform-20231204}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}).
@@ -189,7 +182,7 @@
 
 \cventry
   {Data Analyst}
-  {Codema}
+  {Codema (an energy agency)}
   {Aug 2019 - Oct 2021}
   {Python, Docker, Git}
   {
