feat: remove serverless experience
never launched so doesnt count

--- a/cv.tex
+++ b/cv.tex
@@ -150,17 +150,15 @@
   {Software Engineer / Co-Founder}
   {PowerScope Ltd (a startup)}
   {Aug 2024 - Apr 2025}
-  {Python, TypeScript (React), DynamoDB, AWS, IaC (CDK), Docker, Nix, Git}
+  {Python, Docker, Nix, Git}
   {
       \item
       Co-founded PowerScope Ltd to develop a tool that would enable solar panel installers \& others to scope battery storage solutions for bespoke commercial tenders, \& in the process:
       \begin{itemize}
         \item
         Developed a model to enable estimation of "best case" financial feasibility of battery \& solar projects.
-        \item 
-        Continuously deployed an interactive, serverless web application to grant access to the model.
         \item
-        Trialled the system over 10 or so pilot projects with various customer segments (solar installers, asset owners, energy brokers etc.)
+        Trialled the model over 10 or so pilot projects with various customer segments (solar installers, asset owners, energy brokers etc.)
       \end{itemize}
   }
 
