feat: remove research community founding

--- a/cv.tex
+++ b/cv.tex
@@ -185,12 +185,7 @@
   {Python, Docker, Git}
   {
       \item 
-      Co-developed the \href{https://www.codema.ie/our-work/dublin-region-energy-master-plan/}{\raisebox{-0.05\height}\faGlobe\ \underline{Dublin Energy Masterplan}} (as part of a team of four) to estimate the impact of local \& regional energy policy decisions on the Dublin energy system, \& in the process:
-      \begin{itemize}
-        \item 
-        Developed an open source data pipeline, energy model \& toolkit to generate the report data and visuals reproducibly (see \href{https://www.rowanmolony.com/post/on-building-reproducible-data-analytics-20231109}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}} or \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}).
-        \item Co-founded a community of energy researchers to ease collaboration (\href{https://github.com/energy-modelling-ireland/wiki}{\raisebox{-0.1\height}\faGithub\ \underline{energy-modelling-ireland/wiki}})
-      \end{itemize}
+      Co-developed the \href{https://www.codema.ie/our-work/dublin-region-energy-master-plan/}{\raisebox{-0.05\height}\faGlobe\ \underline{Dublin Energy Masterplan}} (as part of a team of four) to estimate the impact of local \& regional energy policy decisions on the Dublin energy system, \& in the process developed an open source data pipeline, energy model \& toolkit to generate the report data and visuals reproducibly (see \href{https://www.rowanmolony.com/post/on-building-reproducible-data-analytics-20231109}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}} or \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}).
   }
 
 %-----------
