--- a/cv.tex
+++ b/cv.tex
@@ -141,9 +141,7 @@
   {Python (Django), JavaScript, Postgres, Azure, Docker, Nix, Git}
   {
       \item 
-      Formed Thalora Ltd (a one-man shop) through which I worked with companies to help manage legacy codebases (databases, cloud infrastructure, data pipelines, data analytics).
-      Continued working with Mainstream Renewable Power (see below),
-      \& from August 2024 concentrating primarily on PowerScope Ltd (see below).
+      Formed Thalora Ltd through which I continued working with Mainstream Renewable Power (see below) on a part-time basis.
   }
 
 \cventry
@@ -153,10 +151,10 @@
   {Python, Docker, Nix, Git}
   {
       \item
-      Co-founded PowerScope Ltd to develop a tool that would enable solar panel installers \& others to scope battery storage solutions for bespoke commercial tenders, \& in the process:
+      Co-founded PowerScope Ltd to develop a tool to enable solar panel installers (\& others) to scope battery storage solutions for bespoke commercial tenders, \& in the process:
       \begin{itemize}
         \item
-        Developed a model to enable estimation of "best case" financial feasibility of battery \& solar projects.
+        Developed an energy \& financial model to enable estimation of "best case" financial feasibility of battery \& solar projects.
         \item
         Trialled the model over 10 or so pilot projects with various customer segments (solar installers, asset owners, energy brokers etc.)
       \end{itemize}
@@ -172,7 +170,7 @@
       Fully rebuilt Mainstream's data platform (which grants access to timeseries sensor data from over 100 operational locations) to resolve its reliability issues, \& in the process:
       \begin{itemize}
         \item 
-        Simplified the system architecture over time by removing, combining, or replacing its components to ease its maintenance burden while continuing to serve the system's user needs (see \href{https://www.rowanmolony.com/post/on-reengineering-a-legacy-data-platform-20231204}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}).
+        Simplified the system architecture over time by removing, combining, or replacing its components to ease the system's maintenance burden while continuing to serve the team's needs (see \href{https://www.rowanmolony.com/post/on-reengineering-a-legacy-data-platform-20231204}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}).
         \item 
         Developed a high coverage test suite (unit, integration, \& end to end) from nil running in continuous integration to ensure the system's reliability.
       \end{itemize}
